--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8001
 
-CMD ["python3", "app.py"]
+CMD ["uvicorn", "api.model:app", "--host", "0.0.0.0", "--port", "8001"]
