--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./core:/app
     ports:
       - "8000:8000"
+    depends_on:
+      - fastapi
 
   fastapi:
     build:
@@ -20,5 +22,3 @@ services:
       - ./api/models:/app/models
     ports:
       - "8001:8001"
-    depends_on:
-      - django
