--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -3,9 +3,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY api /app
+COPY api/requirements.txt .
 RUN pip install -r requirements.txt
 
 EXPOSE 8001
 
-CMD ["uvicorn", "api.model:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["python3", "app.py"]
