--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,3 +5,6 @@ COPY db.sqlite3 db.sqlite3
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+# docker build -t startup-ml-model .
+# docker run -p 8000:8000 startup-ml-model
