--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,12 @@ jobs:
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+    - name: Change directory to app
+      run: cd app
+
     - name: Build Docker image
       run: docker build -t yourusername/startup-ml-model:latest .
+      working-directory: app
 
     - name: Push Docker image
       run: docker push yourusername/startup-ml-model:latest
