--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,3 +25,9 @@ jobs:
 
     - name: Push Docker image
       run: docker push flexonafft/startup-ml-model:latest
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: user/app:latest
