--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,12 @@ jobs:
       with:
         images: ghcr.io/flexonafft/startup-ml-model
 
+    - name: Change directory to app
+      run: cd app
+
     - name: Build Docker image
-      run: docker build -t flexonafft/startup-ml-model:latest . ./app
+      run: docker build -t flexonafft/startup-ml-model:latest .
+      working-directory: app
 
     - name: Push Docker image to Docker Hub
       run: docker push flexonafft/startup-ml-model:latest
