--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,40 +19,37 @@ jobs:
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v3
       with:
-        images: ghcr.io/flexonafft/startup-ml-model
-
-    - name: Change directory to app
-      run: cd app
+        images: |
+          ghcr.io/flexonafft/startup-ml-model
+          flexonafft/startup-ml-model
 
     - name: Build Docker image
-      run: docker build -t flexonafft/startup-ml-model:latest .
-      working-directory: app
+      run: docker build -t startup-ml-model ./app
 
-    - name: Push Docker image to Docker Hub
-      run: docker push flexonafft/startup-ml-model:latest
+    - name: Tag and push Docker image to Docker Hub
+      run: |
+        docker tag startup-ml-model flexonafft/startup-ml-model:latest
+        docker push flexonafft/startup-ml-model:latest
 
-    - name: Push image to GitHub Container Registry
+    - name: Tag and push Docker image to GitHub Container Registry
       run: |
         IMAGE_ID=ghcr.io/${{ github.repository }}/startup-ml-model
-
         # Change all uppercase to lowercase
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
         # Strip git ref prefix from version
         VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
         # Strip "v" prefix from tag name
         [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
         # Use Docker `latest` tag convention
         [ "$VERSION" == "main" ] && VERSION=latest
-
         echo IMAGE_ID=$IMAGE_ID
         echo VERSION=$VERSION
-
         docker tag startup-ml-model $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
